@@ -56,6 +56,7 @@ v13.0.00
 		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
 		Markbook: removed Learning Area rubrics from multiple column add
 		Markbook: fixed return and presetting of fields when landing on add page from Planner
+		Markbook: made target scale selectable (so not constained to Default Assessment Scale)
 		Messenger: fixed formatting of Sent From Gibbon tag
 		Messenger: fixed display of email/SMS report for recipients with , in their name
 		Messenger: disabled Canned Response for any non-staff users
